btstack_tlv: add btstack_tlv registry to all examples

--- a/example/Makefile.inc
+++ b/example/Makefile.inc
@@ -35,6 +35,7 @@ COMMON += \
 	hci_dump.c		            \
 	l2cap.c			            \
 	l2cap_signaling.c	        \
+	btstack_tlv.c               \
 
 CLASSIC += \
 	btstack_link_key_db_memory.c   \
